--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ body {
 /* Imagen dentro de los ítems del menú */
 .menu-item img {
     width: 100%;
-    max-height: 200px;
+    max-height: auto;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 1rem;
@@ -290,7 +290,7 @@ body {
 
 #modal-details img {
     width: 100%;
-    max-height: 220px;
+    max-height: auto;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 15px;
