--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 280px;
 }
 
 .menu-item:hover {
