--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ body {
     flex-direction: column;
     align-items: center;
     max-width: 280px;
+    height: auto;
 }
 
 .menu-item:hover {
@@ -143,7 +144,6 @@ body {
 /* Imagen dentro de los ítems del menú */
 .menu-item img {
     width: 100%;
-    max-height: 200px;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 1rem;
