--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ body {
     padding: 3rem 5%;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 90%;
     height: 100%;
 }
 
@@ -132,7 +132,7 @@ body {
     flex-direction: column;
     align-items: center;
     max-width: 280px;
-    height: auto;
+    height: 60vh;
 }
 
 .menu-item:hover {
